feat(gameplay/mobs): add Gaia construct, spawnmob command

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,3 +7,5 @@ authors: [ MrInspection ]
 commands:
   broadcast:
     description: BlightedMC provided commands
+  spawnmob:
+    description: BlightedMc provided command
