refactor: reorganize files

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,3 +9,8 @@ commands:
     description: BlightedMC provided commands
   spawnmob:
     description: BlightedMc provided command
+  test:
+  favors:
+    description: Manage the Favors currency system
+  laser:
+  craft:
