--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,8 +7,8 @@ authors: [ MrInspection ]
 commands:
   broadcast:
     description: Broadcast a message to the server
-  spawnmob:
-    description: BlightedMc provided command
+  spawncustommob:
+    description: Spawn a BlightedMC creature
   test:
     description: General testing command
   favors:
@@ -19,5 +19,7 @@ commands:
     description: Open the BlightedMC custom crafting table
   loop:
     description: Execute multiple times a command
+  forcecommand:
+    description: Force another player to execute a command
   kaboom:
     description: Launch all players or a specific player into the sky
