--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -25,3 +25,13 @@ commands:
     description: Launch all players or a specific player into the sky
   giveitem:
     description: Open or give yourself a custom item
+  god:
+    description: Toggle god mode for yourself or another player
+  tp:
+    description: Teleport to a player or location
+  tphere:
+    description: Teleport another player to you
+  tpall:
+    description: Teleport all players to you
+  tppos:
+    description: Teleport to a position
