--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,9 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 23
+      - name: Set up JDK 25
         uses: actions/setup-java@v1
         with:
-          java-version: 23
-      - name: Build with Maven
+          java-version: 25
+      - name: Build and Run Tests
         run: mvn -B package --file pom.xml
