--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -35,3 +35,5 @@ commands:
     description: Teleport all players to you
   tppos:
     description: Teleport to a position
+  fly:
+    description: Toggle fly mode for yourself or another player
