--- a/pom.xml
+++ b/pom.xml
@@ -68,5 +68,10 @@
       <version>1.21.10-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>2.5</version>
+    </dependency>
   </dependencies>
 </project>
