--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,21 +1,33 @@
-# ----------------------------------------------
-#
-#
-# ------------------------------------------------
+# BlightedMC - Made with <3 by Moussa
 
-# BlightedPlayer System
-default_max_mana: 100.0          # Player starting maximum mana
-default_mana_regeneration-rate: 1.0   # Mana regenerated per second
-default_player_health: 20.0      # Maximum health (20 = 10 hearts)
+############################################################
+# +------------------------------------------------------+ #
+# |                       General                        | #
+# +------------------------------------------------------+ #
+############################################################
 
-banners_on_join: true             # Players will have a banner in their helmet slot upon joining for the first time
+default_max_mana: 100.0
+default_mana_regeneration-rate: 1.0
+default_player_health: 20.0
 
-# ------ Fishing System --------------------------------------------------------------------------------------
+# Players will have a banner in their helmet slot upon joining for the first time
+banners_on_join: true
+
+############################################################
+# +------------------------------------------------------+ #
+# |                Fishing System                        | #
+# +------------------------------------------------------+ #
+############################################################
 
 # The probability of fishing blighted loots vs. vanilla fishing loots.
 # The range is between 0.0 and 1.0. Default is 0.50 (50% for vanilla, 50% for blighted loots).
 # This chance doesn't affect the probability of getting specific blighted loot.
 
-custom_loot_chance: 0.50      # The chance of getting custom loot (between 0.0 and 1.0, default is 0.50)
+# The chance of getting custom loot (between 0.0 and 1.0, default is 0.50)
+custom_loot_chance: 0.50
 
-# --------- Server
+############################################################
+# +------------------------------------------------------+ #
+# |                        Server                        | #
+# +------------------------------------------------------+ #
+############################################################
