--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,10 +6,22 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Set up JDK 25
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
-          java-version: 25
+          java-version: '25'
+          distribution: 'temurin'
+          cache: 'maven'
+
       - name: Build and Run Tests
         run: mvn -B package --file pom.xml
+
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: BlightedMC-Plugin
+          path: target/*.jar
+          retention-days: 5
