--- a/pom.xml
+++ b/pom.xml
@@ -73,5 +73,10 @@
       <artifactId>snakeyaml</artifactId>
       <version>2.5</version>
     </dependency>
+    <dependency>
+      <groupId>org.jspecify</groupId>
+      <artifactId>jspecify</artifactId>
+      <version>1.0.0</version>
+    </dependency>
   </dependencies>
 </project>
